--- a/src/App.scss
+++ b/src/App.scss
@@ -1,1 +1,81 @@
-r
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+html,
+body {
+    font-size: 62.5%;
+    font-family: sans-serif;
+    height: 100%;
+}
+
+#root {
+    height: 100%;
+
+    .wrapper {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: blue;
+    
+        .quote-box {
+            min-width: 550px;
+            padding: 3rem;
+            background-color: #fff;
+            max-width: 450px;
+            color: blue;
+    
+            .quote-text {
+                font-size: 4rem;
+                text-align: center;
+                margin-bottom: 2rem;
+                quotes: "‘""’";
+
+                &::before {
+                    content: open-quote;
+                }
+
+                &::after {
+                    content: close-quote;
+                }
+            }
+    
+            .quote-author {
+                font-size: 2rem;
+                font-style: italic;
+                text-align: right;
+                margin-bottom: 2rem;
+            }
+        }
+    
+        .buttons {
+            display: flex;
+    
+            .btn {
+                min-height: 30px;
+                font-size: 2rem;
+                text-decoration: none;
+                background-color: blue;
+                padding: 1rem;
+                color: #fff;
+            }
+    
+            #new-quote {
+                margin-left: auto;
+            }
+        }
+    }
+    
+    .footer {
+        min-height: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1rem;
+        color: #fff;
+    }
+}
